[package]
authors = ["Wyatt Gill <wyattgill01@outlook.com>"]
name = "zenos"
version = "0.1.0"
edition = "2024"

[bin]
name = "zenos"
test = false
bench = false

[dependencies]
# cortex-m = "0.7.7"
# cortex-m-rt = "0.7.5"
# cortex-m-semihosting = "0.5.0"
# panic-semihosting = "0.6.0"

# [profile.dev]
# panic = "abort"
#
# [profile.release]
# panic = "abort"
